app generally modified

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 .footerArrow {
-  background-color: #ccc;
+  background-color: #1c1c1c;
   border-radius: 50%;
   color: #3242aa !important;
   width: 30px !important;
