--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -16,7 +16,7 @@
   font-family: "Permanent Marker", cursive;
   padding-bottom: 100px;
   margin: 70px auto;
-  background-color: #ccc;
+  background-color: #1c1c1c;
   border-radius: 4px;
   width: 180px;
   padding: 3px 4px;
