--- a/src/components/techWriting/TechWriting.css
+++ b/src/components/techWriting/TechWriting.css
@@ -22,7 +22,7 @@
   margin-bottom: 150px;
   margin-top: -70px;
   text-align: center;
-  background-color: #ccc;
+  background-color: #1c1c1c;
   border-radius: 4px;
   width: 180px;
   text-align: center;
