--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -15,7 +15,7 @@
   color: #3242aa;
   font-family: "Permanent Marker", cursive;
   font-size: 18px;
-  background-color: #ccc;
+  background-color: #1c1c1c;
   border-radius: 4px;
   width: 180px;
   padding: 3px 4px;
@@ -34,13 +34,18 @@
   border-radius: 4px;
   width: 180px;
   padding: 1px 2px;
-  border: 1px solid #ccc;
-  margin-top: 70px;
+  border: 1px solid #1c1c1c;
+  margin-top: 90px;
 }
-.contactFlex2:hover {
-    box-shadow: 4px 5px 4px 20px #3242aa;
+.contactFlex2-1 {
+  display: flex;
+  align-items: center;
+  margin: 5px;
+  width: 100%;
+}
+.contactFlex2-1:hover {
+    box-shadow: 2px 2px 3px 7px #3242aa;
     transition: all 0.3s;
-    margin: 41px;
   }
 .contactEmail,
 .contactWhatsapp {
