--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -8,11 +8,11 @@
 .footer-flex {
   @apply flex justify-between;
 }
-
-
 .footer-icons {
-  box-shadow: 2px 3px 5px #3242aa;
-  @apply mx-4 cursor-pointer w-[40px] h-[40px] rounded-md;
+  width: 70px !important;
+  height: 70px !important;
+  background-color: #1c1c1c;
+  @apply mx-4 cursor-pointer w-[40px] h-[40px] rounded-[50%] p-2;
 }
 
 .footer-copyright {
