--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,7 +1,7 @@
 .mainWrapper {
 }
 .mainContents {
-  height: 100vh;
+  height: 80vh;
   @apply flex p-2;
   align-items: center;
   justify-content: space-evenly;
@@ -18,6 +18,7 @@
 .main2-btns {
   color: #ccc;
   border: 1px solid #3242aa;
+  background-color: #1c1c1c;
   font-size: 12px;
   margin: 3px;
   padding: 4px 30px;
@@ -106,12 +107,14 @@
   font-weight: 500;
   border-radius: 3px;
   @apply text-[16px] mt-[5%] text-[#ccc];
+  background-color: #1c1c1c;
+  color: #3242aa !important;
   margin-left: 10px;
 }
 .third div {
   text-align: center;
   border-radius: 3px;
-  background-color: #ccc;
+  background-color: #1c1c1c;
   font-weight: 500;
   color: #3242aa !important;
   @apply text-[16px] mt-[5%] text-[#ccc];
@@ -167,7 +170,7 @@
     align-items: center;
   }
   .container {
-    margin-bottom: 40px;
+    margin: 70px 0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
