--- a/src/components/projects/Project.css
+++ b/src/components/projects/Project.css
@@ -17,7 +17,7 @@
   text-align: center;
   color: #3242aa;
   margin: 70px;
-  background-color: #ccc;
+  background-color: #1c1c1c;
   border-radius: 4px;
   width: 180px;
   padding: 3px 4px;
