--- a/src/components/projects/Project.css
+++ b/src/components/projects/Project.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin: 20px;
+  margin: 140px auto;
 }
 .projectsContents{
   display: grid;
@@ -16,11 +16,15 @@
   font-size: 18px;
   text-align: center;
   color: #3242aa;
-  margin: 70px;
   background-color: #1c1c1c;
   border-radius: 4px;
-  width: 180px;
-  padding: 3px 4px;
+  margin: 0 15px;
+}
+.projectsTitle-avatar{
+  width: 23px !important;
+  height: 23px !important;
+  color: #1c1c1c !important;
+  background-color: #3242aa !important;
 }
 .projectsContent{
   color: #f2f2f2;
@@ -31,7 +35,7 @@
   border: 1px solid #3242aa;
   font-size: 10px;
   padding: 15px;
-  margin: 10px;
+  margin: 40px 10px;
   border-radius: 10px;
   min-height: fit-content;
 }
