contact file modified

--- a/src/components/techWriting/TechWriting.css
+++ b/src/components/techWriting/TechWriting.css
@@ -1,5 +1,5 @@
 .techWriting-wrapper {
-  margin: 70px auto;
+  margin: 0 auto;
   padding: 120px 0;
   border-bottom: 1px solid #3242aa;
   height: 100vh;
