--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,10 +1,10 @@
 .contactWrapper {
-    border-bottom: 1px solid #3242aa;
-    height: 50vh;
+  border-bottom: 1px solid #3242aa;
+  height: 50vh;
 }
 .contactContent {
   width: 50%;
-  margin: 0 auto;
+  margin: 70px auto;
   color: aliceblue;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,13 @@
   margin: 0 15px;
   text-align: center;
 }
-.contactTitle-avatar{
+.contactTalk{
+  font-size: 24px;
+  font-weight: 700;
+  margin: 30px 0;
+  color: #ccc;
+}
+.contactTitle-avatar {
   width: 23px !important;
   height: 23px !important;
   color: #1c1c1c !important;
@@ -40,7 +46,7 @@
   width: 180px;
   padding: 1px 2px;
   border: 1px solid #1c1c1c;
-  margin-top: 90px;
+  margin-top: 40px;
 }
 .contactFlex2-1 {
   display: flex;
@@ -49,9 +55,9 @@
   width: 100%;
 }
 .contactFlex2-1:hover {
-    box-shadow: 2px 2px 3px 7px #3242aa;
-    transition: all 0.3s;
-  }
+  box-shadow: 2px 2px 3px 7px #3242aa;
+  transition: all 0.3s;
+}
 .contactEmail,
 .contactWhatsapp {
   color: #3242aa !important;
@@ -78,14 +84,14 @@
     border: 1px solid #ccc;
     margin-top: 70px;
   }
-.contactEmail,
-.contactWhatsapp {
-  width: 20px !important;
-  height: 20px !important;
-}
-.contactEmail-text,
-.contactWhatsapp-text {
-  font-size: 12px;
-  margin-left: 10px;
-}
+  .contactEmail,
+  .contactWhatsapp {
+    width: 20px !important;
+    height: 20px !important;
+  }
+  .contactEmail-text,
+  .contactWhatsapp-text {
+    font-size: 12px;
+    margin-left: 10px;
+  }
 }
